aliases in the status message. Reported by Marshall. [David]

=item *

Added C<get_site()> to L<Bric::Biz::Asset|Bric::Biz::Asset>, and therefore to
the story, media, and template classes. Suggested by Marshall. [David]

=item *

Added support for the the C<oc_id> parameter to
L<Bric::Dist::Resource|Bric::Dist::Resource> to simplify looking up stale
story and media files for expiration. [David]

=back

=head2 Bug Fixes

=over

=item *

My Workspace now remembers the sort order of assets just as well as desks do.
[David]

=item *

Added more code to the C<inst/upgrade/1.8.9/fix_publish_status.pl> upgrade
script to better cover the possible variations in publish status inaccuracies.
[Brad Fox, Brad Harder, & David]

=item *

Distribution via any mover other than "File System" now correctly strips off
port numbers from the host name. This is most useful when using FTP, SFTP, or
WebDAV to distribute to a preview server serving content from an alternate
port. Reported by Doug Dawson. [David]

=item *

If run as root, C<make clone> now becomes the PostgreSQL system user before
cloning the database, so that it should work properly where PostgreSQL is
configured to use "ident" authentication. [David]

=item *

The list of desks that appear for a given workflow in the navigation iframe
are now properly updated when a new desk is added to the workflow. [Alexey
Dvoychenkov]

=item *

The side navigation no longer shows the "New Alias" links to users who don't
have the proper permissions (CREATE on the start desk). (bug 1203) [Marshall]

=item *

The code of a template no longer disappears when you click "Trail" in the
Template Profile. (bug 1204) [Marshall]

=item *

F<bric_soap> is now more intelligent about parsing IDs from XML elements with
either single or double quotes, and from multiple tags. [Christian Niles and
David]

=item *

Failing to fill in either the "To" or "Bcc" fields of an Email distribution